Add spatial group object tracking with TDD
Features:
- Spatial group simulator with 3D NED coordinates
- Object generation with statistical properties
- Trajectory tracking over time
- 17 comprehensive tests (all passing)
- 5 example scenarios with different characteristics
- Complete TDD evidence (RED -> GREEN -> REFACTOR)
- CLI demo program with multiple outputs

Implementation:
- src/spatial_groups.py: Core simulator (370 lines)
- src/spatial_demo.py: CLI demo with 5 scenarios (280 lines)
- tests/test_spatial_groups.py: 17 tests (300 lines)
- data/sample_spatial_groups.csv: Example input

Outputs:
- 20 CSV/TXT files demonstrating 5 scenarios
- 62 total objects across all scenarios
- Complete position tracking over time

Documentation:
- TDD_SPATIAL_GROUPS_EVIDENCE.md: Complete TDD process
- Updated pytest.ini with pythonpath support

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
 addopts = -q --strict-markers --tb=short
 testpaths = tests
+pythonpath = .
 markers =
     unit: Unit tests
     integration: Integration tests
