Add World Entity Converter for simulation environment
Features:
- Converts trajectory CSV to WORLD_ENTITY format
- Unique key assignment for each object/group pair
- Tab-delimited trajectory files with FIELDS, FRAME, TIME, POS_N, POS_E, POS_D
- WORLD_ENTITY configuration string generation
- Consolidated entity definitions file
- Multiple CSV file support with consistent key numbering

Implementation:
- src/world_entity_converter.py: Core converter (330 lines)
- tests/test_world_entity_converter.py: 11 tests (235 lines)
- docs/WORLD_ENTITY_CONVERTER.md: Complete documentation

Output Structure:
- ./trajectories/G/G_<key>_.txt (individual trajectory files)
- ./trajectories/all_G_WORLD_ENTITIES.txt (consolidated entities)

Testing:
- 11/11 tests passing
- Tested with real trajectory data (9-21 entities)
- TDD methodology (RED -> GREEN phases)

Usage:
- python src/world_entity_converter.py trajectory.csv
- python src/world_entity_converter.py file1.csv file2.csv file3.csv

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ data/large_datasets/
 # Results (timestamp-named files are tracked)
 # Add specific large result files here if needed
 
+# Trajectories (generated WORLD_ENTITY files)
+trajectories/
+
